# One-Billion-Row-Challenge-Python

./: .flake8  .gitignore  README.md  pyproject.toml
data/: weather_stations.csv
src/: create_measurements.py  desafio_01.py  desafio_02_multiprocesso.py  desafio_03_multithreads.py  desafio_04_stream_com_csv.py  desafio_05_stream.py  desafio_06_pandas.py  desafio_07_polars_paralelismo.py  desafio_08_duckdb.py  using_bash_and_awk.sh  using_dask.py  using_duckdb.py  using_pandas.py  using_polars.py  using_python.py  using_python_old.py
